# CrystalBall

./: .gitattributes  .gitignore  .pre-commit-config.yaml  COMMIT_EDITMSG  CrystalBallVisualize.spec  LICENSE  README.md  SECURITY_AUDIT_RESULTS.md  STRUCTURE.md  crystalball.py  demo_cpi_forecasting.py  dev-requirements.txt  fast-commit.ps1  main_with_autopush.py  pyproject.toml  pytest.ini  requirements.txt  test_consensus_framework.py  test_fallbacks.py  test_installation.py
Kwartz/kwartz/: pyproject.toml
Kwartz/kwartz/src/kwartz/: __init__.py
Kwartz/kwartz/src/kwartz/data/: loaders.py  preprocess.py
Kwartz/kwartz/src/kwartz/models/: model_c.py
Kwartz/kwartz/src/kwartz/utils/: logger.py
Kwartz/kwartz/src/scripts/: evaluate.py  train.py
Kwartz/kwartz/tests/: test_kwartz.py
config/: config.yaml  git_gateway_config.py
docs/: CPI_PLOT_GENERATOR.md
src/: CrystallBall.code-workspace  __init__.py  advanced_models.py  analysis.py  api.py  config.py  dashboard.py  dataprocessor.py  diagnostics.py  ensemble.py  evaluation.py  export.py  git_gateway.py  leaderboard.py  llm_consensus.py  logutil.py  main.py  main.py.new  model_adam.py  model_darts.py  model_registry.py  model_spark.py  models_semistructural.py  pipeline.py  ranking.py  run_dashboard.py  schemas.py  stats_robust.py  summary.py  utils.py  visualize.py  visuals.py
tests/: conftest.py  test_api_module.py  test_cpi_backtest.py  test_evaluation.py  test_export_dummy.py  test_kwartz_ensemble.py  test_performance.py  test_samira.py  test_stress.py  test_theta_fallbacks.py  test_utils.py  (+1 more)
(+50 files in other folders)
